<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/tproyecto"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:text="@string/titulop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/dpor"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:text="@string/desarrolladop"/>
                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/obgeneral"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/objetivogral"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/obespecificos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf6"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf8"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf9"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf11"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/obespf12"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#9e9e9e">

        <include layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>